// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`boolean Control > should render a boolean control 1`] = `
"<div id="tres-leches-pane-default" class="tl-fixed tl-top-4 tl-z-24 tl-bg-white tl-shadow-xl tl-p-1 tl-font-sans tl-text-xs tl-overflow-hidden tl-rounded-lg" style="top: 10px; width: 44.20507903623789px; height: 48.0634311877231px; right: 16px; opacity: 0.05555555555555556; transform: translate3d(0px,93.99537602289712px,0px);">
  <header class="tl-flex tl-justify-between tl-items-center tl-text-gray-200 tl-text-xs">
    <div class="w-1/3"></div>
    <div class="tl-cursor-grabbing"><i class="i-ic-baseline-drag-indicator"></i><i class="i-ic-baseline-drag-indicator"></i><i class="i-ic-baseline-drag-indicator"></i></div>
    <div></div><i class="tl-h-4 tl-w-4 tl-p-1.5 tl-flex tl-items-center tl-line-height-0 tl-rounded-full tl-bg-gray-100 tl-text-xs tl-cursor-pointer">🍰</i>
  </header>
  <div class="mt-2">
    <!--v-if-->
    <div>
      <div class="tl-flex tl-px-4 tl-justify-start tl-gap-2 tl-items-center tl-mb-2 tl-min-h-32px"><label class="tl-text-gray-500 tl-w-1/3">test</label><input id="test" checked="" class="tl-hidden" type="checkbox"><label for="test" class="tl-inline-flex tl-items-center tl-cursor-pointer"><span tabindex="0" role="checkbox" aria-checked="true" class="tl-bg-dark-500 tl-w-4 tl-h-4 tl-flex tl-justify-center tl-items-center tl-rounded tl-border tl-border-gray-300 tl-mr-2 tl-transition-colors tl-duration-200"><i class="i-ic:baseline-check tl-text-light"></i></span></label></div>
    </div>
  </div><!-- Resize handles -->
  <!-- <span
      v-if="!isCollapsed"
      class="tl-absolute tl-right-0 tl-top-0 tl-bottom-0 tl-w-2 hover:tl-w-4 tl-transition-all tl-cursor-ew-resize tl-z-10"
      @mousedown="e => startResize('right', e)"
    ></span> --><span class="tl-absolute tl-left-0 tl-right-0 tl-bottom-0 tl-h-2 hover:tl-h-4 tl-transition-all tl-cursor-ns-resize tl-z-10"></span>
  <!-- <span
      v-if="!isCollapsed"
      class="tl-absolute tl-right-0 tl-bottom-0 tl-w-4 tl-h-4 hover:tl-w-6 hover:tl-h-6 tl-transition-all tl-cursor-nwse-resize tl-z-10"
      @mousedown="e => startResize('corner', e)"
    ></span> --><span class="tl-absolute tl-left-0 tl-top-0 tl-bottom-0 tl-w-2 hover:tl-w-4 tl-transition-all tl-cursor-ew-resize tl-z-10"></span><span class="tl-absolute tl-left-0 tl-bottom-0 tl-w-4 tl-h-4 hover:tl-w-6 hover:tl-h-6 tl-transition-all tl-cursor-nesw-resize tl-z-10"></span>
</div>"
`;

exports[`boolean Control > should render a boolean control with a label 1`] = `
"<div id="tres-leches-pane-default" class="tl-fixed tl-top-4 tl-z-24 tl-bg-white tl-shadow-xl tl-p-1 tl-font-sans tl-text-xs tl-overflow-hidden tl-rounded-lg" style="top: 10px; width: 50.37618296199835px; height: 55.70384557199793px; right: 16px; opacity: 0.06643236000000002; transform: translate3d(0px,91.66721371472505px,0px);">
  <header class="tl-flex tl-justify-between tl-items-center tl-text-gray-200 tl-text-xs">
    <div class="w-1/3"></div>
    <div class="tl-cursor-grabbing"><i class="i-ic-baseline-drag-indicator"></i><i class="i-ic-baseline-drag-indicator"></i><i class="i-ic-baseline-drag-indicator"></i></div>
    <div></div><i class="tl-h-4 tl-w-4 tl-p-1.5 tl-flex tl-items-center tl-line-height-0 tl-rounded-full tl-bg-gray-100 tl-text-xs tl-cursor-pointer">🍰</i>
  </header>
  <div class="mt-2">
    <!--v-if-->
    <div>
      <div class="tl-flex tl-px-4 tl-justify-start tl-gap-2 tl-items-center tl-mb-2 tl-min-h-32px"><label class="tl-text-gray-500 tl-w-1/3">test</label><input id="test" checked="" class="tl-hidden" type="checkbox"><label for="test" class="tl-inline-flex tl-items-center tl-cursor-pointer"><span tabindex="0" role="checkbox" aria-checked="true" class="tl-bg-dark-500 tl-w-4 tl-h-4 tl-flex tl-justify-center tl-items-center tl-rounded tl-border tl-border-gray-300 tl-mr-2 tl-transition-colors tl-duration-200"><i class="i-ic:baseline-check tl-text-light"></i></span></label></div>
    </div>
  </div><!-- Resize handles -->
  <!-- <span
      v-if="!isCollapsed"
      class="tl-absolute tl-right-0 tl-top-0 tl-bottom-0 tl-w-2 hover:tl-w-4 tl-transition-all tl-cursor-ew-resize tl-z-10"
      @mousedown="e => startResize('right', e)"
    ></span> --><span class="tl-absolute tl-left-0 tl-right-0 tl-bottom-0 tl-h-2 hover:tl-h-4 tl-transition-all tl-cursor-ns-resize tl-z-10"></span>
  <!-- <span
      v-if="!isCollapsed"
      class="tl-absolute tl-right-0 tl-bottom-0 tl-w-4 tl-h-4 hover:tl-w-6 hover:tl-h-6 tl-transition-all tl-cursor-nwse-resize tl-z-10"
      @mousedown="e => startResize('corner', e)"
    ></span> --><span class="tl-absolute tl-left-0 tl-top-0 tl-bottom-0 tl-w-2 hover:tl-w-4 tl-transition-all tl-cursor-ew-resize tl-z-10"></span><span class="tl-absolute tl-left-0 tl-bottom-0 tl-w-4 tl-h-4 hover:tl-w-6 hover:tl-h-6 tl-transition-all tl-cursor-nesw-resize tl-z-10"></span>
</div>"
`;
